--- a/.github/workflows/bahn_final.yml
+++ b/.github/workflows/bahn_final.yml
@@ -13,41 +13,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Wichtig für stabiles Pull & Push
-
+          fetch-depth: 0  # Erlaubt Git den Zugriff auf die Historie, um Dateien zu aktualisieren
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-
       - name: Install Requests
         run: pip install requests
-
       - name: Main Loop
         run: |
           git config --global user.name "Bahn-Bot"
           git config --global user.email "bot@github.com"
-          
           for i in {1..15}
           do
-            # Fehler abfangen, damit die Schleife nicht stirbt
-            python fetch_all_stations.py || echo "Script Fehler, überspringe Runde..."
-            
+            python fetch_all_stations.py
             git add *.json
+            # Commit nur wenn sich was geändert hat
             if ! git diff --cached --quiet; then
               git commit -m "Live Update Runde $i ($(date +%H:%M))"
-              # Verbesserte Push-Logik gegen Abbrüche
+              # Sicherer Push, damit der Bot nicht abbricht, wenn der Server kurz blockiert
               git pull --rebase origin main
-              git push origin main || echo "Push fehlgeschlagen, versuche es nächste Runde"
+              git push origin main
             fi
-            sleep 150
+            sleep 150 # Alle 2,5 Minuten ein Update reicht völlig aus
           done
-
       - name: Restart
         if: always()
         env:
           GH_TOKEN: ${{ github.token }}
-        run: |
-          # Verhindert, dass der Neustart-Befehl den ganzen Job als "failed" markiert
-          gh workflow run bahn_update.yml || echo "Restart aktuell nicht möglich"
-          
+        run: gh workflow run bahn_update.yml
+        
